Fixing text overflow
Text overflow is now hidden

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ h1{
   height: 150px;
   margin-left: 5%;
   margin-bottom: 5%;
+  overflow: hidden;
 }
 #aboutme h2{
   margin-bottom: 0.3em;
@@ -84,6 +85,7 @@ img{
   margin-right: 5%;
   margin-bottom: 5%;
   padding-left: 20px;
+  overflow: hidden;
 }
 #obs h4{
   font-size: 20px;
